# tree_magic

./: .directory  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  graph.dot
benches/: from_u8.rs  match_u8.rs
benches/application/: zip
src/: .main.rs.kate-swp  basetype.rs  fdo_magic.rs  lib.rs  magic.rs  main.rs
src/basetype/: check.rs  init.rs  mod.rs
src/fdo_magic/: builtin.rs  check.rs  mod.rs  ruleset.rs  subclasses  sys.rs
src/fdo_magic/builtin/: aliases  check.rs  init.rs  magic  mod.rs
src/parse/: basetype.rs  magic.rs  mod.rs
tests/: from_filepath.rs  from_u8.rs  match_u8.rs
tests/application/: x-7z-compressed  x-tar
tests/audio/: flac  mpeg  ogg  opus
tests/image/: png  tiff  x-lss16  x-ms-bmp  x-pcx  x-portable-pixmap  x-tga  x-xpixmap  xbm
tests/text/: plain
