[package]
name = "tree_magic"
version = "0.2.1"
authors = ["A. Hancock <aahancoc@umich.edu>"]
description = "Determines the MIME type of a file by traversing a filetype tree."
repository = "https://github.com/aahancoc/tree_magic/"
documentation = "https://docs.rs/tree_magic/"
readme = "README.md"
keywords = ["mime", "filesystem", "media-types"]
license = "MIT"

[dependencies]
petgraph = "^0.4"
nom = "^2"
lazy_static = "^0.2"
fnv = "^1"
parking_lot = "^0.4"

tabwriter = { version = "^1", optional = true }
clap = { version = "^2", optional = true }
scoped_threadpool = { version = "^0.1", optional = true }
walkdir = { version = "^1", optional = true }
num_cpus = { version = "^1", optional = true }

[features]
cli = ["clap", "tabwriter", "scoped_threadpool", "walkdir", "num_cpus"]
staticmime = []     # Use &'static str for output insead of String. (disabled for now)
default = []

[lib]
crate-type = ["lib"]
path = "src/lib.rs"

[[bin]]
required-features = ["cli"]
name = "tmagic"
path = "src/main.rs"
